added navbar, about me, projects, and resume

--- a/aboutme.html
+++ b/aboutme.html
@@ -36,12 +36,13 @@
         </h1>
         <br>
         <div class="has-text-centered">
-          <a href="https://www.twitch.tv/Evernight27" class="icon is-large fab fa-lg fa-twitch">
-          </a>Twitch
-          <a href="https://www.github.com/Evernight27" class="icon is-large fab fa-lg fa-github">
-          </a>
-          <a href="https://www.linkedin.com/in/marshall-grubb-7a5601242/" class="icon is-large fab fa-lg fa-linkedin">
-          </a>
+          I am a budding software engineer with a desire to learn and a love of critical thinking. My background in the
+          Army has helped build excellent team working skills and my love of steep learning curves helps to emphasize a
+          learning mindset. <br><br>Email: Evernight27@hotmail.com<br><br>Tech Stack: JavaScript, React, Python, HTML,
+          CSS, PostgreSQL, MongoDB, Mongoose,
+          Docker,
+          Django, Flask, Git
+
         </div>
       </div>
     </div>
