--- a/resume.html
+++ b/resume.html
@@ -36,11 +36,8 @@
         </h1>
         <br>
         <div class="has-text-centered">
-          <a href="https://www.twitch.tv/Evernight27" class="icon is-large fab fa-lg fa-twitch">
-          </a>Twitch
-          <a href="https://www.github.com/Evernight27" class="icon is-large fab fa-lg fa-github">
-          </a>
-          <a href="https://www.linkedin.com/in/marshall-grubb-7a5601242/" class="icon is-large fab fa-lg fa-linkedin">
+          <a href="https://docs.google.com/document/d/1NmN7mBe0Cgmodo7KF5t98ldzGRO6XKnpV8zDSkR0jus/edit?usp=sharing">Download
+            my resume here.
           </a>
         </div>
       </div>
