update and cleanup pages

--- a/projects.html
+++ b/projects.html
@@ -6,44 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Marshall Grubb</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css">
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="https://marshallgrubb.com/">
-        Home
-      </a>
-      <a class="navbar-item" href="https://marshallgrubb.com/aboutme">
-        About me
-      </a>
-
-      <a class="navbar-item" href="https://marshallgrubb.com/resume">
-        Resume
-      </a>
-
-      <a class="navbar-item" href="https://marshallgrubb.com/projects">
-        Projects
-      </a>
-    </div>
-  </nav>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
 </head>
 
 <body>
   <section class="hero is-dark is-bold is-fullheight">
+    <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          Home
+        </a>
+        <a class="navbar-item" href="/resume">
+          Resume
+        </a>
+        <a class="navbar-item" href="/projects">
+          Projects
+        </a>
+      </div>
+    </nav>
     <div class="hero-body">
       <div class="container is-fluid">
         <h1 class="title is-1 has-text-centered">
           Animestagram
         </h1>
-        <br>
-        <div class="has-text-centered">
-          <a href="https://github.com/lee-benson/Animestagram">Github
-          </a><br><br>
-          <a href="https://animestagram-336o40xa5-lee-benson.vercel.app/">Deployment
-          </a><br><br>
-          Animestagram allows users to create accounts and write reviews for anime that they watch. The reviews pull
-          from an outside API and automatically populates a picture for the show. It uses token authentication to make
-          sure that users can only edit their own posts and aggregates all reviews on a home screen. <br><br> Tech
-          Stack: JavaScript React CSS HTML
+        <div class="container is-max-desktop has-text-centered">
+          <a href="https://github.com/lee-benson/Animestagram" class="icon is-large fab fa-lg fa-github"></a>
+          <a href="https://animestagram-336o40xa5-lee-benson.vercel.app/" class="icon is-large fas fa-lg fa-globe"></a>
+          </a>
+          <p>
+            Animestagram allows users to create accounts and write reviews for anime that they watch. The reviews pull
+            from an outside API and automatically populates a picture for the show. It uses token authentication to make
+            sure that users can only edit their own posts and aggregates all reviews on a home screen.
+          </p>
+          <br>
+          <p>
+            <span class="has-text-weight-bold">Tech Stack: </span>JavaScript, React, CSS, HTML
+          </p>
         </div>
       </div>
     </div>
@@ -54,13 +52,17 @@
         <h1 class="title is-1 has-text-centered">
           World Builder
         </h1>
-        <br>
-        <div class="has-text-centered">
-          <a href="https://github.com/Evernight27/World_Builder">Github
-          </a><br><br>
-          World Builder is a backend application designed to help track and organize brainstorming ideas for world
-          building. It allows you to store a variety of different ideas, such as characters, cities, and nations, and
-          interconnect those objects so that a city belongs to a nation and such.<br><br>Tech Stack: JavaScript Mongoose
+        <div class="container is-max-desktop has-text-centered">
+          <a href="https://github.com/Evernight27/World_Builder" class="icon is-large fab fa-lg fa-github"></a>
+          <p>
+            World Builder is a backend application designed to help track and organize brainstorming ideas for world
+            building. It allows you to store a variety of different ideas, such as characters, cities, and nations, and
+            interconnect those objects so that a city belongs to a nation and such.
+          </p>
+          <br>
+          <p>
+            <span class="has-text-weight-bold">Tech Stack: </span>JavaScript, Mongoose
+          </p>
         </div>
       </div>
     </div>
@@ -71,13 +73,17 @@
         <h1 class="title is-1 has-text-centered">
           Encounter Randomizer
         </h1>
-        <br>
-        <div class="has-text-centered">
-          <a href="https://github.com/Evernight27/Encounter_Randomizer">Github
-          </a><br><br>
-          Encounter Randomizer takes user input for a D&D party and provides an appropriate combat rating monster from
-          an outside API. It allows for repeated randomization until a desired monster is found and provides additional
-          information needed for combat.<br><br>Tech Stack: JavaScript CSS HTML
+        <div class="container is-max-desktop has-text-centered">
+          <a href="https://github.com/Evernight27/Encounter_Randomizer" class="icon is-large fab fa-lg fa-github"></a>
+          <p>
+            Encounter Randomizer takes user input for a D&D party and provides an appropriate combat rating monster from
+            an outside API. It allows for repeated randomization until a desired monster is found and provides additional
+            information needed for combat.
+          </p>
+          <br>
+          <p>
+            <span class="has-text-weight-bold">Tech Stack: </span>JavaScript CSS HTML
+          </p>
         </div>
       </div>
     </div>
