--- a/index.html
+++ b/index.html
@@ -6,35 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Marshall Grubb</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css">
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="https://marshallgrubb.com/">
-        Home
-      </a>
-      <a class="navbar-item" href="https://marshallgrubb.com/aboutme">
-        About me
-      </a>
-
-      <a class="navbar-item" href="https://marshallgrubb.com/resume">
-        Resume
-      </a>
-
-      <a class="navbar-item" href="https://marshallgrubb.com/projects">
-        Projects
-      </a>
-    </div>
-  </nav>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
 </head>
 
 <body>
   <section class="hero is-dark is-bold is-fullheight">
+    <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          Home
+        </a>
+        <a class="navbar-item" href="/resume">
+          Resume
+        </a>
+        <a class="navbar-item" href="/projects">
+          Projects
+        </a>
+      </div>
+    </nav>
     <div class="hero-body">
       <div class="container is-fluid">
         <h1 class="title is-1 has-text-centered">
           Hi! I'm Marshall Grubb.
         </h1>
-        <br>
+        <br><br>
+        <div class="container is-max-desktop has-text-centered">
+          I am a budding software engineer with a desire to learn and a love of critical thinking. My background in the
+          Army has helped build excellent team working skills and my love of steep learning curves helps to emphasize a
+          learning mindset.
+        </div>
+        <br><br>
+        <p class="container is-max-desktop has-text-centered">
+          <span class="has-text-weight-bold">Tech Stack: </span>JavaScript, React, Python, HTML,
+          CSS, PostgreSQL, MongoDB, Mongoose,
+          Docker,
+          Django, Flask, Git</p>
+        <br><br>
         <div class="has-text-centered">
           <a href="https://www.twitch.tv/Evernight27" class="icon is-large fab fa-lg fa-twitch">
           </a>
@@ -47,5 +54,16 @@
     </div>
   </section>
 </body>
-
 </html>
+<style>
+.hero {
+  padding-top: 0px !important;
+}
+
+.navbar {
+  &.is-transparent {
+    background-color: transparent !important;
+    background-image: none !important;
+  }
+}
+</style>
