add link to encounter randomizer

--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,7 @@
         </h1>
         <div class="container is-max-desktop has-text-centered">
           <a href="https://github.com/Evernight27/Encounter_Randomizer" class="icon is-large fab fa-lg fa-github"></a>
+          <a href="https://evernight27.github.io/Encounter_Randomizer/" class="icon is-large fas fa-lg fa-globe"></a>
           <p>
             Encounter Randomizer takes user input for a D&D party and provides an appropriate combat rating monster from
             an outside API. It allows for repeated randomization until a desired monster is found and provides additional
